--- a/orbit-realm/index.html
+++ b/orbit-realm/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tegnologik</title>
+    <title>Tecnologik</title>
   </head>
 
   <body>
